--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
         <!-- Font Awesome
     ================================================== -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.11/css/all.css" integrity="sha384-p2jx59pefphTFIpeqCcISO9MdVfIm4pNnsL08A6v5vaQc4owkQqxMV8kg4Yvhaw/" crossorigin="anonymous">
 
           <!-- CUSTOM CSS
     ================================================== -->
