--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
         <!-- Scripts here -->
   
-        <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js'></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
         
