--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <span id="header_scripts"></span>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
         <!-- Scripts here -->
@@ -93,6 +95,8 @@
         
     
     <div id="root"></div>
+    <div id="google_analytics"></div>
+    <div id="body_scripts"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
