--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
     ================================================== -->
 
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/custom.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/responsive.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
