--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,10 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/custom.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/responsive.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
